--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,6 +79,7 @@ jobs:
           tag: CI 
           image: ${{ secrets.ECR_REGISTRY_SECRET }}/substrate-node:${{ github.sha }}
           sha: ${{ github.sha }}
+          tests: premerge
         env:
           SUBSTRATE_REPO_SSH_KEY: ${{ secrets.SUBSTRATE_REPO_SSH_KEY }}
           EARTHLY_TAR: ${{ secrets.EARTHLY_TAR }}
@@ -221,11 +222,36 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SSH_AUTH_SOCK: /tmp/ssh_agent.sock
-
+          
+  local-environment-tests-post-merge:
+    if: github.event.pull_request.merged == true
+    needs: build
+    permissions:
+      id-token: write
+      contents: write
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Deploy and test against local environment
+        uses: ./.github/actions/tests/local-environment-tests
+        with:
+          tag: CI 
+          image: ${{ secrets.ECR_REGISTRY_SECRET }}/substrate-node:${{ github.sha }}
+          sha: ${{ github.sha }}
+          tests: postmerge
+        env:
+          SUBSTRATE_REPO_SSH_KEY: ${{ secrets.SUBSTRATE_REPO_SSH_KEY }}
+          EARTHLY_TAR: ${{ secrets.EARTHLY_TAR }}
+          AWS_ROLE_ARN_SECRET: ${{ secrets.AWS_ROLE_ARN_SECRET }}
+          AWS_REGION: ${{ env.AWS_REGION }}
+          ACTIONS_PAT: ${{ secrets.ACTIONS_PAT }}
+          ECR_REGISTRY_SECRET: ${{ secrets.ECR_REGISTRY_SECRET }}
+          TEST_ENVIRONMENT: local
     
   post-merge-actions-complete:
     if: github.event.pull_request.merged == true
-    needs: [deploy-rustdoc, upload-chain-specs]
+    needs: [deploy-rustdoc, upload-chain-specs, local-environment-tests-post-merge]
     runs-on: ubuntu-latest
     steps:
       - name: Post Merge Actions Complete
