--- a/.github/actions/tests/local-environment-tests/action.yml
+++ b/.github/actions/tests/local-environment-tests/action.yml
@@ -10,6 +10,9 @@ inputs:
   tag:
     description: "PC Artifact Tag"
     required: true
+  tests:
+    description: "Test set to run (premerge or postmerge)"
+    required: true    
 
 outputs: {}
 
@@ -127,6 +130,7 @@ runs:
         init_timestamp: ${{ env.INIT_TIMESTAMP }}
         blockchain: substrate
     - name: Wait for epoch 4
+      if: ${{ inputs.tests == 'postmerge' }}
       uses: ./.github/actions/tests/wait-for-epoch
       with:
         epoch: 4
@@ -134,6 +138,7 @@ runs:
         node: cardano-node-1
         environment:
     - name: Run all tests
+      if: ${{ inputs.tests == 'postmerge' }}
       uses: ./.github/actions/tests/run-e2e-tests
       with:
         env: ${{ env.TEST_ENVIRONMENT }}
