--- a/.github/actions/tests/local-environment-tests/action.yml
+++ b/.github/actions/tests/local-environment-tests/action.yml
@@ -108,25 +108,25 @@ runs:
         deployment: docker
         node: cardano-node-1
         environment:
-    - name: Run registration tests
+    - name: Run all tests (do not verify full MC epoch)
       uses: ./.github/actions/tests/run-e2e-tests
       with:
         env: ${{ env.TEST_ENVIRONMENT }}
-        keyword: "test_register_candidate or test_deregister_candidate or test_add_permissioned_candidate or test_remove_permissioned_candidate"
         init_timestamp: ${{ env.INIT_TIMESTAMP }}
         blockchain: substrate
     - name: Wait for epoch 3
+      if: ${{ inputs.tests == 'postmerge' }}
       uses: ./.github/actions/tests/wait-for-epoch
       with:
         epoch: 3
         deployment: docker
         node: cardano-node-1
         environment:
-    - name: Run all tests
+    - name: Run all tests (do not verify full MC epoch)
+      if: ${{ inputs.tests == 'postmerge' }}
       uses: ./.github/actions/tests/run-e2e-tests
       with:
         env: ${{ env.TEST_ENVIRONMENT }}
-        mc_epoch: 2
         init_timestamp: ${{ env.INIT_TIMESTAMP }}
         blockchain: substrate
     - name: Wait for epoch 4
