--- a/.github/actions/tests/local-environment-tests/action.yml
+++ b/.github/actions/tests/local-environment-tests/action.yml
@@ -108,6 +108,11 @@ runs:
         deployment: docker
         node: cardano-node-1
         environment:
+    - name: Let PC warm up
+      run: |
+        sleep 30
+        docker logs partner-chains-node-1
+      shell: bash
     - name: Run all tests (do not verify full MC epoch)
       uses: ./.github/actions/tests/run-e2e-tests
       with:
