--- a/.github/actions/tests/local-environment-tests/action.yml
+++ b/.github/actions/tests/local-environment-tests/action.yml
@@ -121,7 +121,7 @@ runs:
         blockchain: substrate
         markers: "not active_flow and not passive_flow and not probability and not rpc"
     - name: Wait for epoch 3
-      if: ${{ inputs.tests == 'postmerge' }}
+      if: ${{ inputs.tests == 'premerge' }}
       uses: ./.github/actions/tests/wait-for-epoch
       with:
         epoch: 3
@@ -129,14 +129,14 @@ runs:
         node: cardano-node-1
         environment:
     - name: Run all tests (do not verify full MC epoch)
-      if: ${{ inputs.tests == 'postmerge' }}
+      if: ${{ inputs.tests == 'premerge' }}
       uses: ./.github/actions/tests/run-e2e-tests
       with:
         env: ${{ env.TEST_ENVIRONMENT }}
         init_timestamp: ${{ env.INIT_TIMESTAMP }}
         blockchain: substrate
     - name: Wait for epoch 4
-      if: ${{ inputs.tests == 'postmerge' }}
+      if: ${{ inputs.tests == 'premerge' }}
       uses: ./.github/actions/tests/wait-for-epoch
       with:
         epoch: 4
@@ -144,7 +144,7 @@ runs:
         node: cardano-node-1
         environment:
     - name: Run all tests
-      if: ${{ inputs.tests == 'postmerge' }}
+      if: ${{ inputs.tests == 'premerge' }}
       uses: ./.github/actions/tests/run-e2e-tests
       with:
         env: ${{ env.TEST_ENVIRONMENT }}
