--- a/.github/actions/tests/local-environment-tests/action.yml
+++ b/.github/actions/tests/local-environment-tests/action.yml
@@ -10,6 +10,9 @@ inputs:
   tag:
     description: "PC Artifact Tag"
     required: true
+  tests:
+    description: "Test set to run (premerge or postmerge)"
+    required: true    
 
 outputs: {}
 
@@ -105,28 +108,34 @@ runs:
         deployment: docker
         node: cardano-node-1
         environment:
-    - name: Run registration tests
+    - name: Let PC warm up
+      run: |
+        sleep 30
+      shell: bash
+    - name: Run all tests (do not verify full MC epoch)
       uses: ./.github/actions/tests/run-e2e-tests
       with:
         env: ${{ env.TEST_ENVIRONMENT }}
-        keyword: "test_register_candidate or test_deregister_candidate or test_add_permissioned_candidate or test_remove_permissioned_candidate"
         init_timestamp: ${{ env.INIT_TIMESTAMP }}
         blockchain: substrate
+        markers: "not active_flow and not passive_flow and not probability and not rpc"
     - name: Wait for epoch 3
+      if: ${{ inputs.tests == 'postmerge' }}
       uses: ./.github/actions/tests/wait-for-epoch
       with:
         epoch: 3
         deployment: docker
         node: cardano-node-1
         environment:
-    - name: Run registration tests
+    - name: Run all tests (do not verify full MC epoch)
+      if: ${{ inputs.tests == 'postmerge' }}
       uses: ./.github/actions/tests/run-e2e-tests
       with:
         env: ${{ env.TEST_ENVIRONMENT }}
-        keyword: "test_register_candidate or test_deregister_candidate or test_add_permissioned_candidate or test_remove_permissioned_candidate"
         init_timestamp: ${{ env.INIT_TIMESTAMP }}
         blockchain: substrate
     - name: Wait for epoch 4
+      if: ${{ inputs.tests == 'postmerge' }}
       uses: ./.github/actions/tests/wait-for-epoch
       with:
         epoch: 4
@@ -134,6 +143,7 @@ runs:
         node: cardano-node-1
         environment:
     - name: Run all tests
+      if: ${{ inputs.tests == 'postmerge' }}
       uses: ./.github/actions/tests/run-e2e-tests
       with:
         env: ${{ env.TEST_ENVIRONMENT }}
