--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -114,7 +114,7 @@ jobs:
 
   argocd-tests:
     if: github.event_name == 'workflow_dispatch' || (github.event_name == 'pull_request' && github.event.pull_request.merged == false)
-    needs: deploy-argocd
+    needs: [build, deploy-argocd]
     runs-on: [self-hosted, eks]
     steps:
       - name: Checkout
